app/2service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-app-2-service
spec:
  selector:
    app: nest-app-2
  ports:
    - protocol: TCP
      port: 91
      targetPort: 80
  type: ClusterIP
