app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-app-service
spec:
  selector:
    app: nest-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
